--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
         <nav class="site-header__nav navbar">
           <ul class="navbar__list">
             <li class="navbar__item">
-              <a href="#" class="navbar__link">1 cезон</a>
+              <a href="sezon-1.html" class="navbar__link">1 cезон</a>
             </li>
             <li class="navbar__item">
-              <a href="#" class="navbar__link">2 cезон</a>
+              <a href="sezon-2.html" class="navbar__link">2 cезон</a>
             </li>
             <li class="navbar__item">
-              <a href="#" class="navbar__link">3 cезон</a>
+              <a href="sezon-3.html" class="navbar__link">3 cезон</a>
             </li>
             <li class="navbar__item">
-              <a href="#" class="navbar__link">4 cезон</a>
+              <a href="sezon-4.html" class="navbar__link">4 cезон</a>
             </li>
             <li class="navbar__item">
-              <a href="#" class="navbar__link">5 cезон</a>
+              <a href="sezon-5.html" class="navbar__link">5 cезон</a>
             </li>
             <li class="navbar__item">
-              <a href="#" class="navbar__link">6 cезон</a>
+              <a href="sezon-6.html" class="navbar__link">6 cезон</a>
             </li>
           </ul>
         </nav>
