--- a/sezon-3.html
+++ b/sezon-3.html
@@ -10,7 +10,7 @@
   <header class="header header--sezon-1">
     <div class="site-header">
       <div class="container sezon__container">
-        <a href="#" class="logo logo-sezon">
+        <a href="index.html" class="logo logo-sezon">
           <img class="logo-img" src="img/logo.png" alt="">
         </a>
       <nav class="site-header__nav navbar sezon--navbar">
