--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <div class="hero">
       <div class="container hero__container">
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
           <img class="logo-img" src="img/logo.png" alt="">
         </a>
       </div>
